tests/ui/auto_enum/marker.stderr
error: A custom marker name is specified that duplicated the name already used in the parent scope
 --> $DIR/marker.rs:5:36
  |
5 |     #[auto_enum(Iterator, marker = foo)]
  |                                    ^^^

error: cannot find macro `marker` in this scope
  --> $DIR/marker.rs:25:21
   |
25 |         2 => return marker!(1..9), //~ ERROR cannot find macro `marker!` in this scope
   |                     ^^^^^^
